* Aug 6 2002, Kristian Van Der Vliet *

Made a small amendment to du.c from fileutils-4.1; this may fix the problem with "du" showing 0 bytes for all
files, but I havn't tested it.

* Aug 6 2002, Kristian Van Der Vliet *

Added sed-3.02 in apps/gnu/  Thanks goto Andrew Brown < abrown.taos@bemail.org> for porting & checking

* Aug 6 2002, Kristian Van Der Vliet *

Removed compile gaurds from pkgmanager.cpp

* Aug 6 2002, Kristian Van Der Vliet *

Moved other/keymaps/Contributors to doc/Contributors.  This will be a more general file to hold details of patch,
driver, keymap etc. authors.

* Aug 6 2002, Kristian Van Der Vliet *

Added a Hungarian keymap, from Szekely Krisztian < szekelyk@different.hu >

* Jul 28 2002, Kristian Van Der Vliet *

Added upgrade tarball build scripts in build-tools/

* Jul 28 2002, Kristian Van Der Vliet *

Created ChangeLog.Kernel, ChangeLog.UI & ChangeLog.Desktop

* Jul 11 2002, Kristian Van Der Vliet *

Restructure and fix libs/compat-1.0, all of the libraries are kept within a tarball in
order to preserve symlinks through the CVS Repository.

* Jul 7 2002, Kristian Van Der Vliet *

Made a few small changes to the SBPro driver, to stop it creating & holding /dev/sound/dsp
even when no SBPro is detected.

* Jul 5 2002, Kristian Van Der Vliet *

Added apm_poweroff() function from a patch Anthony Morphett < tonymorph@yahoo.com >
in kernel.c

* Jul 5 2002, Kristian Van Der Vliet *

Added shutdown.c to apps/utils/sysutils

* Jul 4 2002, Kristian Van Der Vliet *

Added the following drivers:

	Network Interface Cards:
		3c509
		3c59x
		pcnet32
		tulip

	Sound:
		emu10k1
		es1371
		sbpro
		via686a

	Video:
		mach64
		trident

* Jul 4 2002, Kristian Van Der Vliet *

Added apps/utils/mixer

* Jul 4 2002, Kristian Van Der Vliet *

Updated build-tools/mkdisttree.sh

* Jul 2 2002, Kristian Van Der Vliet *

Added the following Window Decorators:

	Beish
	Drow
	Mulvane
	Photon
	Red
	Win98

Added the following keymaps:

	Russian
	Polish
